findbugs DM_NUMBER_CTOR  IS2_INCONSISTENT_SYNC
svn path=/dasCore/community/autoplot2011/trunk/; revision=7046